--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.11.12",
     "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "^13.1.2",
     "react": "^18.2.0",
