--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint-staged": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
