--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.12",
+    "@testing-library/user-event": "^14.4.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "^13.1.2",
     "react": "^18.2.0",
