--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.12",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.3.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "^13.1.2",
     "react": "^18.2.0",
