--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint **/*.tsx --fix",
-    "test": "vitest run --coverage"
+    "test": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -18,6 +19,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-mock": "^29.5.0",
     "lint-staged": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
