--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
     "jsdom": "^21.1.0",
+    "msw": "^1.2.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
-  },  
+  },
   "jest": {
-  "testEnvironment": "node"
+    "testEnvironment": "node"
   }
 }
